Fix #2 for starting on simon says on mobile, now fully working.

--- a/Simon Says/styles.css
+++ b/Simon Says/styles.css
@@ -10,14 +10,14 @@ body {
   color: #FEF2BF;
 }
 
-.container {
+.container2 {
   display: block;
   width: 50%;
   margin: auto;
 
 }
 
-.btn {
+.butn {
   margin: 25px;
   display: inline-block;
   height: 200px;
